--- a/etc/traefik/traefik.yml
+++ b/etc/traefik/traefik.yml
@@ -19,6 +19,9 @@ entryPoints:
   gitea_ssh:
     address: :222
 
+serversTransport:
+  insecureSkipVerify: true
+
 providers:
   docker:
     endpoint: unix:///var/run/docker.sock
