--- a/etc/traefik/traefik.yml
+++ b/etc/traefik/traefik.yml
@@ -40,3 +40,13 @@ certificatesResolvers:
       storage: /etc/traefik/acme.json
       httpChallenge:
         entryPoint: web
+
+  cf:
+    acme:
+      email: riley@rileymathews.com
+      storage: acme.json
+      dnsChallenge:
+        provider: cloudflare
+        resolvers:
+          - 1.1.1.1:53
+          - 8.8.8.8:53
