--- a/etc/traefik/file_providers/file-provider-dashboard.yml
+++ b/etc/traefik/file_providers/file-provider-dashboard.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     dashboard:
-      rule: Host(`traefik.home.rileymathews.com`)
+      rule: Host(`traefik.rileymathews.com`)
       service: api@internal
       middlewares:
         - test-auth
