--- a/etc/traefik/file_providers/file-provider-pihole.yml
+++ b/etc/traefik/file_providers/file-provider-pihole.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     router-pihole:
-      rule: Host(`pihole.home.rileymathews.com`)
+      rule: Host(`pihole.rileymathews.com`)
       service: service-pihole
       tls:
         certResolver: le
