master -- moved storage

--- a/etc/traefik/traefik.yml
+++ b/etc/traefik/traefik.yml
@@ -44,7 +44,7 @@ certificatesResolvers:
   cf:
     acme:
       email: riley@rileymathews.com
-      storage: acme.json
+      storage: /etc/traefik/cfacme.json
       dnsChallenge:
         provider: cloudflare
         resolvers:
